test/scc/pp/errors/052.a
052.t:2:7: error: extra tokens at end of #else directive